# umr_temp

./: .env.example  AGENTS.md  CLAUDE.md  ONBOARDING.md  PI05_BASE_POLICY_RUNBOOK.md  README.md  pyproject.toml
InternVLA-A1/launch/: internvla_a1_3b_finetune.sh
data/: instruction.txt
data/output_frames/: reasoning_trace.txt
scripts/: export_goals.py  run_episode.py  run_live_e2e_quick.py  run_sim_episode.py  train_eval_ppo.py  train_eval_ppo_multiview.py
sharpa/: __init__.py  config.py  loop.py
sharpa/agents/: __init__.py  explorer.py  planner.py  verifier.py
sharpa/api/: __init__.py  imagegen.py  llm.py  vlm.py
sharpa/interface/: __init__.py  policy_bridge.py
sharpa/memory/: __init__.py  store.py
sharpa/models/: __init__.py  episode.py
tests/: test_explorer.py  test_loop.py  test_planner.py  test_policy_bridge.py  test_sim_random_rollout.py  test_verifier.py
